fix z-index menu, footer

--- a/style.css
+++ b/style.css
@@ -1280,7 +1280,7 @@ p:first-child {
   right: 0;
   height: 100vh;
   width: calc(50% + 3px);
-  z-index: -1;
+  z-index: 1;
   flex-direction: column;
   border-left: 3px solid #D2030F;
   /* border-top: 3px solid #D2030F; */
@@ -1459,6 +1459,7 @@ p:first-child {
 #footer-landing {
   bottom:0;
   width:100%;
+  z-index: 10;
   position: absolute;
 }
 
